tests/paczka1/fuzzy1/59934764.err
Error in line 3: rgLYQoaRngs S123 19,9
Error in line 2: QO3MgJ S123 31,2
Error in line 11: 9u9P S184 37n8
Error in line 16: rgLYQoaRngs S123 82,0
Error in line 21: A645 S123 -5,1
Error in line 9: 3bsdfWZ57eZ S123 76,0
